deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: systemzero
spec:
  selector:
    app: systemzero
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
